--- a/Rethinkable Lego Analysis.ipynb
+++ b/Rethinkable Lego Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c61171ae",
+   "id": "a49b7846",
    "metadata": {},
    "source": [
     "# LEGO Data Analysis - Rebrickable"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e79a216",
+   "id": "4feefd55",
    "metadata": {},
    "source": [
     "This dataset was gotten from https://rebrickable.com/downloads/"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71b15384",
+   "id": "ba59bbe3",
    "metadata": {},
    "source": [
     "The LEGO Parts/Sets/Colors and Inventories of every official LEGO set in the Rebrickable database is available for download as csv files here. These files are automatically updated daily. If you need more details, you can use the API which provides real-time data, but has rate limits that prevent bulk downloading of data"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c602725",
+   "id": "e918c584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "2231df88",
+   "id": "525cf0aa",
    "metadata": {},
    "source": [
     "#### Getting Data"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c7cd81cd",
+   "id": "221e079d",
    "metadata": {
     "scrolled": false
    },
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ed825b30",
+   "id": "9c55811b",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fa4e895",
+   "id": "03d8e66e",
    "metadata": {},
    "source": [
     "#### Checking the datatypes"
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9173af84",
+   "id": "8aa2c0e8",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b053ce4",
+   "id": "d1d98a54",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "782e47b9",
+   "id": "74dfefce",
    "metadata": {},
    "source": [
     "#### checking for null values"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5f8ddb3f",
+   "id": "d232a590",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bac0f94b",
+   "id": "50bc78ba",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30de85aa",
+   "id": "deb51266",
    "metadata": {},
    "source": [
     "#### Checking details of the data"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d8a66c70",
+   "id": "1176bac0",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bc81680a",
+   "id": "e78dbc44",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b21228ad",
+   "id": "5bf589e5",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32458952",
+   "id": "5e2e2826",
    "metadata": {},
    "source": [
     "#### Merging our Data"
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0f8792ec",
+   "id": "e51c92cc",
    "metadata": {
     "scrolled": true
    },
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2b489afa",
+   "id": "517473d3",
    "metadata": {
     "scrolled": true
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9ce854b1",
+   "id": "f1f28dcb",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923c0201",
+   "id": "48fd1963",
    "metadata": {},
    "source": [
     "#### Analysis"
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4060d2bb",
+   "id": "d45fb3af",
    "metadata": {},
    "source": [
     "#### what is the total number of parts per theme?"
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "286560a9",
+   "id": "1a7c6266",
    "metadata": {},
    "outputs": [
     {
@@ -740,9 +740,366 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e117522",
+   "metadata": {},
+   "source": [
+    "#### What is the total number of parts per year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "e9eefa7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>num_parts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>264828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>211981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>191526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>178634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>171766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1956</td>\n",
+       "      <td>246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1954</td>\n",
+       "      <td>117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1959</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1953</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year  num_parts\n",
+       "70  2021     264828\n",
+       "69  2020     211981\n",
+       "68  2019     191526\n",
+       "66  2017     178634\n",
+       "67  2018     171766\n",
+       "..   ...        ...\n",
+       "5   1956        246\n",
+       "3   1954        117\n",
+       "8   1959         65\n",
+       "2   1953         50\n",
+       "1   1950          6\n",
+       "\n",
+       "[72 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parts_per_year = data.groupby('year').sum().reset_index()\n",
+    "parts_per_year = parts_per_year[['year', 'num_parts']].sort_values('num_parts', ascending=False)\n",
+    "parts_per_year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d85c5d4",
+   "metadata": {},
+   "source": [
+    "#### How many sets were created in each century in the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d3a387f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>set_num</th>\n",
+       "      <th>name_sets</th>\n",
+       "      <th>year</th>\n",
+       "      <th>theme_id</th>\n",
+       "      <th>num_parts</th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_themes</th>\n",
+       "      <th>parent_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>001-1</td>\n",
+       "      <td>Gears</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Technic</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0011-2</td>\n",
+       "      <td>Town Mini-Figures</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>67</td>\n",
+       "      <td>12</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Classic Town</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0011-3</td>\n",
+       "      <td>Castle 2 for 1 Bonus Offer</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>199</td>\n",
+       "      <td>0</td>\n",
+       "      <td>199</td>\n",
+       "      <td>Lion Knights</td>\n",
+       "      <td>186.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0012-1</td>\n",
+       "      <td>Space Mini-Figures</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>143</td>\n",
+       "      <td>12</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Supplemental</td>\n",
+       "      <td>126.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0013-1</td>\n",
+       "      <td>Space Mini-Figures</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>143</td>\n",
+       "      <td>12</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Supplemental</td>\n",
+       "      <td>126.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  set_num                   name_sets  year  theme_id  num_parts   id  \\\n",
+       "0   001-1                       Gears  1965         1         43    1   \n",
+       "1  0011-2           Town Mini-Figures  1979        67         12   67   \n",
+       "2  0011-3  Castle 2 for 1 Bonus Offer  1987       199          0  199   \n",
+       "3  0012-1          Space Mini-Figures  1979       143         12  143   \n",
+       "4  0013-1          Space Mini-Figures  1979       143         12  143   \n",
+       "\n",
+       "    name_themes  parent_id  \n",
+       "0       Technic        NaN  \n",
+       "1  Classic Town       50.0  \n",
+       "2  Lion Knights      186.0  \n",
+       "3  Supplemental      126.0  \n",
+       "4  Supplemental      126.0  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "4d59c6ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1965, 1979, 1987, 2013, 1966, 1967, 1985, 1968, 2015, 2019, 1973,\n",
+       "       1999, 1964, 1969, 1978, 1976, 1975, 2010, 2009, 2011, 2012, 1970,\n",
+       "       2001, 2008, 2016, 2017, 2018, 2003, 2002, 2004, 2006, 1971, 1982,\n",
+       "       2005, 2007, 1986, 2014, 2020, 2021, 2022, 1977, 1983, 1991, 1980,\n",
+       "       1984, 1981, 2000, 1998, 1997, 1955, 1956, 1957, 1958, 1974, 1972,\n",
+       "       1992, 1990, 1989, 1988, 1993, 1994, 1996, 1995, 1959, 1962, 1961,\n",
+       "       1960, 1963, 1949, 1950, 1953, 1954], dtype=int64)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.year.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "1844329d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1949, 1950, 1953, 1954, 1955, 1956, 1957, 1958, 1959, 1960, 1961,\n",
+       "       1962, 1963, 1964, 1965, 1966, 1967, 1968, 1969, 1970, 1971, 1972,\n",
+       "       1973, 1974, 1975, 1976, 1977, 1978, 1979, 1980, 1981, 1982, 1983,\n",
+       "       1984, 1985, 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994,\n",
+       "       1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,\n",
+       "       2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016,\n",
+       "       2017, 2018, 2019, 2020, 2021, 2022], dtype=int64)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checking the years in order to determine the centuries\n",
+    "unique_year = data['year'].unique()\n",
+    "unique_year.sort()\n",
+    "unique_year\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "336e030f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Centuries'] = np.where(data['year']> 2000, '21st_Century', '20th_Century')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "5038011e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        20th_Century\n",
+       "1        20th_Century\n",
+       "2        20th_Century\n",
+       "3        20th_Century\n",
+       "4        20th_Century\n",
+       "             ...     \n",
+       "19373    21st_Century\n",
+       "19374    21st_Century\n",
+       "19375    21st_Century\n",
+       "19376    21st_Century\n",
+       "19377    21st_Century\n",
+       "Name: Centuries, Length: 19378, dtype: object"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Centuries']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0308dca0",
+   "id": "20075704",
    "metadata": {},
    "outputs": [],
    "source": []
